@@ -19,7 +19,7 @@ version_minecraft=1.14.4
 version_mcp=20190829-1.14.3
 
 # Mod Dependencies
-version_curios=FORGE-1.14.4-0.23
+version_curios=FORGE-1.14.4-0.24
 version_autosave=1.14.2-1.0.1
 
 # Curse
