@@ -1,11 +1,11 @@
 package com.robertx22.mine_and_slash.database.spells.projectile;
 
-import com.robertx22.mine_and_slash.database.stats.stat_types.generated.ElementalSpellDamage;
-import com.robertx22.mine_and_slash.saveclasses.item_classes.SpellItemData;
 import com.robertx22.mine_and_slash.database.spells.bases.DamageData;
 import com.robertx22.mine_and_slash.database.spells.bases.EffectCalculation;
 import com.robertx22.mine_and_slash.database.spells.bases.SpellEffectDamage;
 import com.robertx22.mine_and_slash.database.spells.entities.bases.EntityElementalBolt;
+import com.robertx22.mine_and_slash.database.stats.stat_types.generated.ElementalSpellDamage;
+import com.robertx22.mine_and_slash.saveclasses.item_classes.SpellItemData;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.SoundUtils;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.util.Hand;
@@ -20,7 +20,7 @@ public abstract class BaseSpellProjectile extends BaseBolt {
 
     @Override
     public int useTimeTicks() {
-        return 8;
+        return 10;
     }
 
     public BaseSpellProjectile() {
